--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-easy-icon": "^1.0.10",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
@@ -60,6 +61,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-testing-library": "^5.10.0",
     "jest": "^29.2.1",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "2.8.3",
     "react-test-renderer": "18.2.0",
