--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-i18next": "^12.1.5",
     "react-native": "0.71.2",
     "react-native-bootsplash": "^4.4.2",
     "react-native-easy-icon": "^1.0.10",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
