--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@reduxjs/toolkit": "^1.9.2",
-    "@sentry/react-native": "^4.14.0",
+    "@sentry/react-native": "^4.15.0",
     "@types/styled-components-react-native": "^5.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-config-prettier": "^8.6.0",
@@ -30,6 +30,7 @@
     "eslint-plugin-react-native-a11y": "^3.3.0",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
+    "metro-config": "^0.75.0",
     "react": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-i18next": "^12.1.5",
@@ -67,6 +68,8 @@
     "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "2.8.3",
+    "react-native-svg": "^13.8.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
