--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "2.8.3",
+    "react-native-mask-input": "^1.2.3",
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
