--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@sentry/react-native": "^4.15.0",
     "@types/styled-components-react-native": "^5.2.1",
+    "axios": "^1.3.4",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
@@ -42,8 +43,10 @@
     "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "typesafe-actions": "^5.1.0"
   },
