--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "target": "esnext",
     "skipLibCheck": true,
     "baseUrl": ".",
+    "useUnknownInCatchVariables": false,
     "paths": {
       "src/*": ["src/*"]
     },
