--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-native-bootsplash": "^4.4.2",
     "react-native-config": "^1.5.0",
     "react-native-easy-icon": "^1.0.10",
+    "react-native-gradient-buttons": "^2.0.2",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-text-input-mask": "^3.1.4",
