--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@reduxjs/toolkit": "^1.9.2",
-    "@sentry/react-native": "^4.15.0",
+    "@sentry/react-native": "^5.7.1",
     "@types/axios": "^0.14.0",
     "@types/styled-components-react-native": "^5.2.1",
     "axios": "^1.3.4",
@@ -34,10 +34,10 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "metro-config": "^0.75.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-i18next": "^12.1.5",
-    "react-native": "0.71.6",
+    "react-native": "^0.71.6",
     "react-native-bootsplash": "^4.4.2",
     "react-native-config": "^1.5.0",
     "react-native-easy-icon": "^1.0.10",
